media rules and layout changes

--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
     <div id="topbar">
 
     </div>
-
-
-
   </header>
   <div id="container">
-    <!-- Intro -->
-    <div id="introDiv">
-      <div>
-        <h1>Max Reiner</h1>
-        <p id="roles">Infomatik Student - Mechatroniker - Maker</p>
+    <section id="intro">
+      <!-- Intro -->
+      <div id="introDiv">
+        <div>
+          <h1>Max Reiner</h1>
+          <p id="roles">Infomatik Student - Mechatroniker - Maker</p>
+        </div>
+        <div id="introLogos">
+          <img class="imgLogo" src="./Logos/blender-logo-png_seeklogo-394263.png" alt="">
+          <img class="imgLogo" src="./Logos/bambu-lab-logo-png_seeklogo-619494.png" alt="">
+          <img class="imgLogo" src="./Logos/html5-with-wordmark-color-seeklogo.png" alt="">
+          <img class="imgLogo" src="./Logos/react-logo-png_seeklogo-273845.png" alt="">
+          <img class="imgLogo" src="./Logos/tailwind-css-logo-png_seeklogo-354675.png" alt="">
+        </div>
+        <div>
+          <p id="introDivImgSrc">
+            Bild von
+            <a
+              href="https://pixabay.com/de/users/beear-797783/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=647481">Beear</a>
+            auf
+            <a
+              href="https://pixabay.com/de//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=647481">Pixabay</a>
+          </p>
+        </div>
       </div>
-      <div id="introLogos">
-        <img class="imgLogo" src="./Logos/blender-logo-png_seeklogo-394263.png" alt="">
-        <img class="imgLogo" src="./Logos/bambu-lab-logo-png_seeklogo-619494.png" alt="">
-        <img class="imgLogo" src="./Logos/html5-with-wordmark-color-seeklogo.png" alt="">
-        <img class="imgLogo" src="./Logos/react-logo-png_seeklogo-273845.png" alt="">
-        <img class="imgLogo" src="./Logos/tailwind-css-logo-png_seeklogo-354675.png" alt="">
-      </div>
-      <div>
-        <p id="introDivImgSrc">
-          Bild von
-          <a
-            href="https://pixabay.com/de/users/beear-797783/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=647481">Beear</a>
-          auf
-          <a
-            href="https://pixabay.com/de//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=647481">Pixabay</a>
-        </p>
-      </div>
-    </div>
+    </section>
+
     <nav>
       <div class="divider1"></div>
       <div id="navigationBarWrapper">
@@ -278,15 +278,20 @@
           <img class="galleryImg" src="./Gallery/usb_halter.jpg" alt="">
         </div>
       </div>
-      <div class="divider1"></div>
-    </section>
-    <!-- Footer -->
-    <footer>
-      <div>
-        <h4>Ende der Seite xD</h4>
-      </div>
-    </footer>
   </div>
+  
+  </section>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <div id="topbar">
+      <h4>Ende der Seite xD</h4>
+    </div>
+  </footer>
+
+
+
 </body>
 
 </html>
