--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Intro -->
       <div id="introDiv">
         <div>
-          <h1>Max Reiner</h1>
+          <h1>Max</h1>
           <p id="roles">Infomatik Student - Mechatroniker - Maker</p>
         </div>
         <div id="introLogos">
@@ -279,10 +279,8 @@
         </div>
       </div>
   </div>
-
   </section>
   </div>
-
   <!-- Footer -->
   <footer>
     <div id="topbar">
