--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- About me -->
       <div>
         <h2>Über mich</h2>
-        <p>22 Jahre, Görlitz, HSZG, bla bla</p>
+        <p>22 Jahre, Görlitz, Hochschule Zittau/Görlitz</p>
       </div>
       <div class="divider1"></div>
     </section>
@@ -80,7 +80,7 @@
           <h3>3D Druck</h3>
           <div class="divider2"></div>
           <p>
-            mehr Jährige Erfahrung im Rapid Prototyping und Seriendruck sowie
+            mehr Jährige Erfahrung im Rapid Prototyping und Seriendruck der sowie
             Montrage von Baugruppen
           </p>
         </div>
