--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Max Reiner</title>
+  <title>Max</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -80,31 +80,28 @@
           <h3>3D Druck</h3>
           <div class="divider2"></div>
           <p>
-            mehr Jährige Erfahrung im Rapid Prototyping und Seriendruck der sowie
-            Montrage von Baugruppen
+            Mehrjährige Erfahrung im Rapid Prototyping, im Seriendruck sowie in der Montage von Baugruppen.
           </p>
         </div>
         <div class="skillCard">
           <h3>CAD</h3>
           <div class="divider2"></div>
           <p>
-            Reverse Engineering, Rekonstruktion oder Konstruktionslösungen
-            nach idividuellen Anforderungen mit Autodesk Fusion 360
+            Reverse Engineering, Rekonstruktion und maßgeschneiderte Konstruktionslösungen mit Autodesk Fusion 360.
           </p>
         </div>
         <div class="skillCard">
           <h3>Mechatronik</h3>
           <div class="divider2"></div>
           <p>
-            IHK Abschluss als Mechatroniker mit Kompetenz in Wartung,
-            Instandhaltung sowie neu Errichtung von Maschinen.
+            IHK-Abschluss als Mechatroniker mit Erfahrung in Wartung, Instandhaltung und Neuerrichtung von Maschinen.
           </p>
         </div>
 
         <div class="skillCard">
           <h3>Programmieren</h3>
           <div class="divider2"></div>
-          <p>WebDev, Tailwind CCS, HTML, JavaScript, React, Next.JS, AWS,…</p>
+          <p>Erfahrung mit modernen Technologien wie Tailwind CSS, HTML, JavaScript, React, Next.js und AWS für performante und skalierbare Webanwendungen.</p>
         </div>
       </div>
       <div class="divider1"></div>
@@ -119,21 +116,15 @@
           <h3>Neiße Elektro 2025</h3>
           <div class="divider2"></div>
           <p>
-            10. nach gesamt Platzierung + Bester Teilnehmer für Deutschland
+            10. Platz in der Gesamtwertung und bester Teilnehmer aus Deutschland.
           </p>
         </div>
         <div class="skillCard">
           <h3>Fachabitur Technik</h3>
           <div class="divider2"></div>
           <p>
-            Jahrgangsbester des einjährigen Fachabitur Technik am BSZ Zittau
-            mit Durchschnitt 1,5
+            Jahrgangsbester im einjährigen Fachabitur Technik am BSZ Zittau mit einem Durchschnitt von 1,5.
           </p>
-        </div>
-        <div class="skillCard">
-          <h1></h1>
-          <div class="divider2"></div>
-          <p></p>
         </div>
       </div>
       <div class="divider1"></div>
@@ -148,20 +139,13 @@
           <h3>Facharbeit</h3>
           <div class="divider2"></div>
           <p>
-            Betrachtung einer Möglichkeit der nachhaltigen und
-            umweltfreundlichen Energiespeicherung zur Sicherung der
-            Netzfrequenz in Zeiten des Energiewandels.
+            Analyse nachhaltiger und umweltfreundlicher Energiespeicherlösungen zur Stabilisierung der Netzfrequenz im Kontext des Energiewandels.
           </p>
         </div>
         <div class="skillCard">
-          <h3>Entwicklung eines Lötrauchfilters</h3>
+          <h3>Entwicklung einer Lötrauchabsaugung</h3>
           <div class="divider2"></div>
-          <p></p>
-        </div>
-        <div class="skillCard">
-          <h3></h3>
-          <div class="divider2"></div>
-          <p></p>
+          <p>Konstruktion, Elektroplanung, 3D-Druck und Montage einer Lötrauchabsaugung mit Aktivkohle- und Feinstaubfilter.</p>
         </div>
       </div>
       <div class="divider1"></div>
