inhalt und styles

--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
       <!-- About me -->
       <div>
         <h2>Über mich</h2>
-        <p>22 Jahre, Görlitz, Hochschule Zittau/Görlitz</p>
+        <p>22 Jahre, Görlitz, Hochschule Zittau/Görlitz. </p>
+        <p>Meine Fachgebiete und Hobbys liegen vor allem im technischen Bereich. Ich beschäftige mich leidenschaftlich
+          mit CAD, 3D-Druck und Programmierung und tüftle gerne an Projekten, die sich umbauen oder verbessern lassen.
+          Darüber hinaus habe ich eine große Freude an Elektronik-Basteleien: vom Löten bis hin zur Entwicklung eigener
+          Geräte liebe ich es, Dinge mit Kopf und Händen entstehen zu lassen. Dabei kommt mir mein Wissen aus der
+          Mechatroniker-Ausbildung zugute, durch das ich sowohl in Mechanik, Elektrik als auch in Fertigung versiert bin
+          und den Umgang mit verschiedensten Technologien und Werkzeugen beherrsche.</p>
       </div>
       <div class="divider1"></div>
     </section>
@@ -94,14 +100,14 @@
           <h3>Mechatronik</h3>
           <div class="divider2"></div>
           <p>
-            IHK-Abschluss als Mechatroniker mit Erfahrung in Wartung, Instandhaltung und Neuerrichtung von Maschinen.
+            IHK-Abschluss als Mechatroniker mit Erfahrung in Wartung, Instandhaltung und Neuerrichtung von Maschinen. Zusätzlich verfüge ich über Kurse und Zertifizierungen für Gabelstapler, Kran, CNC-Service und Schweißen.
           </p>
         </div>
-
         <div class="skillCard">
           <h3>Programmieren</h3>
           <div class="divider2"></div>
-          <p>Erfahrung mit modernen Technologien wie Tailwind CSS, HTML, JavaScript, React, Next.js und AWS für performante und skalierbare Webanwendungen.</p>
+          <p>Erfahrung mit modernen Technologien wie Tailwind CSS, HTML, JavaScript, React, Next.js und AWS für
+            performante und skalierbare Webanwendungen.</p>
         </div>
       </div>
       <div class="divider1"></div>
@@ -139,13 +145,15 @@
           <h3>Facharbeit</h3>
           <div class="divider2"></div>
           <p>
-            Analyse nachhaltiger und umweltfreundlicher Energiespeicherlösungen zur Stabilisierung der Netzfrequenz im Kontext des Energiewandels.
+            Analyse nachhaltiger und umweltfreundlicher Energiespeicherlösungen zur Stabilisierung der Netzfrequenz im
+            Kontext des Energiewandels.
           </p>
         </div>
         <div class="skillCard">
           <h3>Entwicklung einer Lötrauchabsaugung</h3>
           <div class="divider2"></div>
-          <p>Konstruktion, Elektroplanung, 3D-Druck und Montage einer Lötrauchabsaugung mit Aktivkohle- und Feinstaubfilter.</p>
+          <p>Konstruktion, Elektroplanung, 3D-Druck und Montage einer Lötrauchabsaugung mit Aktivkohle- und
+            Feinstaubfilter.</p>
         </div>
       </div>
       <div class="divider1"></div>
@@ -158,107 +166,260 @@
       <div class="skillSection" id="skillSection4">
         <div class="galleryCard">
           <h4>Mein 3D Drucker</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#3D-DRUCKER</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/printer_setup.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Messestand Render</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#RENDER</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/messestand.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Lötabsaugung vorn</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#3D-Druck</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#ELEKTRO</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/absaugung_vorn.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Lötabsaugung hinten</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#3D-Druck</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#ELEKTRO</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/absaugung_hinten.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>JgPz. E100 Modell</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#RENDER</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/jgpz.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Differential Getriebe</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#RENDER</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/diff20render.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Raspberry Pi4 Case</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#RENDER</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/pi_case.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Vergaseranschluss</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/ansaug_cad1.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Vergaseranschluss</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/ansaug_cad2.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Vergaseranschluss</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/ansaug_cad3.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Vergaseranschluss</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#3D-DRUCK</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#MONTAGE</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/ansaug1.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Vergaseranschluss</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#3D-DRUCK</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#MONTAGE</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/ansaug2.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Vergaseranschluss</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#3D-DRUCK</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#MONTAGE</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/ansaug_cad3.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Schlüsselanhänger</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/anhaenger_steelhunter.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Schlüsselanhänger</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/anhaenger_steelhunter_alt.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Hundemarke</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/hundemarke_blume.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Hundemarke</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/hundemarke_zuckerstange.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Taxi Schild</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/maxitaxi.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Visualisierung für Facharbeit</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/hubspeicher.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>USB-Stick Halter</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#CAD</p>
+            </div>
+            <div class="imgTagDiv">
+              <p class="imgTagP">#FUSION360</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/usb_halter_render.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>USB-Stick Halter</h4>
-          <p></p>
+          <div class="imgTagCont">
+            <div class="imgTagDiv">
+              <p class="imgTagP">#3D-DRUCK</p>
+            </div>
+          </div>
           <img class="galleryImg" src="./Gallery/usb_halter.jpg" alt="">
         </div>
       </div>
@@ -272,4 +433,5 @@
     </div>
   </footer>
 </body>
+
 </html>
