--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <p class="imgTagP">#MONTAGE</p>
             </div>
           </div>
-          <img class="galleryImg" src="./Gallery/ansaug_cad3.jpg" alt="">
+          <img class="galleryImg" src="./Gallery/ansaug3.jpg" alt="">
         </div>
         <div class="galleryCard">
           <h4>Schlüsselanhänger</h4>
